...
    }

    // MARK: - Functions
    
    func showAlertMessage() {
        presenter.statisticService?.store(correct: presenter.correctAnswer, total: presenter.questionAmount)
        let alertMessage = AlertModel(title: "Этот раунд окончен!", text: presenter.alertText(), buttonText: "Сыграть еще раз?", completion: { [weak self] in
            guard let self = self else { return }
            
            self.presenter.restartGame()
            self.presenter.questionFactory?.requestNextQuestion()
        })
        alertPresentation?.showAlert(quiz: alertMessage)
...
